--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             font-size: clamp(2rem, 5vw, 3.2rem);
             margin-bottom: 12px;
             background: linear-gradient(90deg, var(--deep-blue) 0%, var(--accent-blue) 100%);
-            -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
             line-height: 1.2;
         }
@@ -186,7 +186,7 @@
             color: var(--accent-red);
             margin-bottom: 8px;
             background: linear-gradient(90deg, var(--accent-red), #ff6666);
-            -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
             line-height: 1.2;
         }
@@ -234,7 +234,7 @@
             color: var(--accent-red);
             font-weight: 600;
             background: linear-gradient(90deg, var(--accent-red), #ff6666);
-            -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
         }
         
@@ -310,7 +310,7 @@
             font-size: clamp(1.3rem, 3.5vw, 1.8rem);
             margin-bottom: 20px;
             background: linear-gradient(90deg, #ffffff, #e6f7ff);
-            -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
             line-height: 1.3;
         }
